--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="https://forms.gle/dy74zq5FA9eWErXx6">Start</a>
+      <a class="btn-getstarted" href="https://forms.gle/jy5XPxLw3hNzs2wx8">Start</a>
 
     </div>
   </header>
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="text-center" data-aos="zoom-out" data-aos-delay="100">
-          <a href="https://forms.gle/dy74zq5FA9eWErXx6" class="btn-get-started">Mulai</a>
+          <a href="https://forms.gle/jy5XPxLw3hNzs2wx8" class="btn-get-started">Mulai</a>
         </div>
 
        
